// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<div>
  <h5>
    Total expense: 
    $15,000.00
  </h5>
</div>
`;

exports[`should correctly render ExpensesSummary with multiple expense 1`] = `
<div>
  <h5>
    Total expense: 
    $116,500.00
  </h5>
</div>
`;
